--- a/MainProject.API/appsettings.json
+++ b/MainProject.API/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=35090;Database=devdb;User Id=devdbuser;password=devdbpassword"
+  }
 }
 
