--- a/MainProject.API/appsettings.Development.json
+++ b/MainProject.API/appsettings.Development.json
@@ -4,6 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "AWS": {
+    "Profile": "ProgrammaticUser",
+    "Region": "ca-central-1"
   }
-}
+
+  }
 
