--- a/LibraryClass.Services/LibraryClass.Services.csproj
+++ b/LibraryClass.Services/LibraryClass.Services.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <None Remove="Services\" />
     <None Remove="Services\Interfaces\" />
+    <None Remove="AWSSDK.S3" />
+    <None Remove="Microsoft.AspNetCore.Http.Features" />
+    <None Remove="Microsoft.Extensions.Configuration.Binder" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -17,5 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\LibraryClass\LibraryClass.Models.csproj" />
     <ProjectReference Include="..\LibraryClass.Repositories\LibraryClass.Repositories.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.103.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.3" />
   </ItemGroup>
 </Project>
