--- a/LibraryClass/LibraryClass.Models.csproj
+++ b/LibraryClass/LibraryClass.Models.csproj
@@ -9,7 +9,7 @@
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\net6.0\LibraryClass.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="ViewModels\" />
