--- a/LibraryClass/LibraryClass.Models.csproj
+++ b/LibraryClass/LibraryClass.Models.csproj
@@ -9,7 +9,12 @@
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile></DocumentationFile>
+    <DocumentationFile>bin\Debug\net6.0\LibraryClass.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\net6.0\LibraryClass.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="ViewModels\" />
