--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - ConnectionStrings__DefaultConnection=Server=mainproject.db;Database=devdb;User Id=devdbuser;password=devdbpassword
       - Auth0__Domain=https://dev-imv7dvp8n7sd2xfz.us.auth0.com/
-      - Auth0__Audience=http//marketforyou.com
+      - Auth0__Audience=http://marketforyou.com
       - Auth0__TokenRedirectUrl=http://localhost:3587
       - AWS__ImageBucket=mymarketforyou-dev
       - AWS__Region=ca-central-1
