--- a/MainProject.API/MainProject.API.csproj
+++ b/MainProject.API/MainProject.API.csproj
@@ -24,6 +24,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
+    <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +43,7 @@
     <None Remove="Helpers\" />
     <None Remove="Swashbukle\" />
     <None Remove="MiddleWare\" />
+    <None Remove="Amazon.Extensions.Configuration.SystemsManager" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
